  * Changed link location from /usr/sbin to /usr/local/bin in deb package.