@@ -1,1 +1,3 @@
   * Changed link location from /usr/sbin to /usr/local/bin in deb package.
+
+  * Update grammar with list_limit and select_points_limit. (issue #3)
